adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,6 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente eum animi amet saepe optio sunt odio possimus beatae, nesciunt fugiat magni tempora eaque aspernatur ipsam natus consectetur, modi assumenda quidem.</p>
     <p>&copy;Lucas Matos</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae culpa reprehenderit rem consequuntur harum vero quae perspiciatis eum iste explicabo quam itaque velit repellendus odit quis natus, illo nobis quo.</p>
 </body>
 </html>
