--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Olá, Mundo</h1>
-
+<!--Parágrafo automático usando o LOREM-->
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente eum animi amet saepe optio sunt odio possimus beatae, nesciunt fugiat magni tempora eaque aspernatur ipsam natus consectetur, modi assumenda quidem.</p>
 <br>
     <p>&copy;Lucas Matos</p>
+    <!--Aqui adicionei e marquei como cópia-->
 <br>
+<!--Parágrafo automático usando o LOREM-->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae culpa reprehenderit rem consequuntur harum vero quae perspiciatis eum iste explicabo quam itaque velit repellendus odit quis natus, illo nobis quo.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem doloribus cum rem facilis quidem amet delectus voluptatibus, asperiores dicta nemo aut deserunt molestias error quae recusandae doloremque officiis! Quibusdam, fugit!</p>
 </body>
